--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <h1 class="product__title">Gabrielle Essence Eau De Parfum</h1>
 
-        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
+        <p class="product__description">A floral, solar and voluptuous interpretation composed by Olivier Polge,
           Perfumer-Creator for the House of CHANEL.</p>
 
         <div class="product__price__group">
